--- a/COPY_OF_TEST/.settings/org.talend.repository.prefs
+++ b/COPY_OF_TEST/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=master
 repository.project.id=enc\:migration.token.encryption.key\:uFhRrT41VCmy2gaioscXDwBanF/ZHrxF/XVUG5Sqpln5k7rDLYCz/gM\=
